; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_test_online_clone__network_bare.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_test_online_clone__network_bare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@g_options = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@g_repo = common dso_local global i32 0, align 4
@LIVE_REPO_URL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"./foo\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"origin\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_clone__network_bare() #0 {
  %1 = alloca i32*, align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_options, i32 0, i32 0), align 4
  %2 = load i32, i32* @LIVE_REPO_URL, align 4
  %3 = call i32 @git_clone(i32* @g_repo, i32 %2, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), %struct.TYPE_3__* @g_options)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @git_repository_is_bare(i32 %5)
  %7 = call i32 @cl_assert(i32 %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = call i32 @git_remote_lookup(i32** %1, i32 %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_remote_free(i32* %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_clone(i32*, i32, i8*, %struct.TYPE_3__*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_repository_is_bare(i32) #1

declare dso_local i32 @git_remote_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_remote_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
